Whitespace issue fixed

--- a/src/app/components/todo-item/todo-item.component.sass
+++ b/src/app/components/todo-item/todo-item.component.sass
@@ -47,6 +47,7 @@ $item-padding: 10px
 .item-body
 	max-height: 0
 	overflow: hidden
+	white-space: pre-wrap
 
 .delete-button
 	display: flex
